--- a/index.html
+++ b/index.html
@@ -1,27 +1,44 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="heimdall">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Heimdall</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/readable/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="/favicon.ico">
-  </head>
-  <body ng-controller='MainCtrl'>
-    <div class='container'>
-      <h1 class='text-center'>Heimdall</h1>
-      <h5 class='text-center'>A lightweight template for your Angular.js needs.</h5>
-      <img class='img-responsive center-block' src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTBXOfCCt94PxcPwX7KL1_K4OHHqHg2q9C6t_ZrohUVjkiEFJnd">
-      
-    </div>
 
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/bower_components/firebase/firebase.js"></script>
-    <script src="/bower_components/angular/angular.js"></script>
-    <script src="/bower_components/angularfire/index.js"></script>
-    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Heimdall</title>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/readable/bootstrap.min.css">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="shortcut icon" href="/favicon.ico">
+</head>
+
+<body ng-controller='MainCtrl'>
+  <table class="table">
+    <thead class="table-head">
+      <tr>
+        <th class="header" ng-class="highlightclass" ng-repeat="(key, data) in singleObj">{{key}}</th>
+      </tr>
+    </thead>
+    <tbody class="table-body">
+      <tr ng-repeat="obj in json">
+        <td class="data-value" ng-class="highlightclass">{{obj.feature}}</td>
+        <td class="data-value" id="{{obj.FF1}}" ng-mouseenter="highlightclass='highlight'" ng-mouseleave="highlightclass=''">{{obj.FF1}}</td>
+        <td class="data-value" id="{{obj.FF2}}" ng-mouseenter="highlightclass='highlight'" ng-mouseleave="highlightclass=''">{{obj.FF2}}</td>
+        <td class="data-value" id="{{obj.IE1}}" ng-mouseenter="highlightclass='highlight'" ng-mouseleave="highlightclass=''">{{obj.IE1}}</td>
+        <td class="data-value" id="{{obj.IE2}}" ng-mouseenter="highlightclass='highlight'" ng-mouseleave="highlightclass=''">{{obj.IE2}}</td>
+        <td class="data-value" id="{{obj.IE3}}" ng-mouseenter="highlightclass='highlight'" ng-mouseleave="highlightclass=''">{{obj.IE3}}</td>
+        <td class="data-value" id="{{obj.WK1}}" ng-mouseenter="highlightclass='highlight'" ng-mouseleave="highlightclass=''">{{obj.WK1}}</td>
+        <td class="data-value" id="{{obj.WK2}}" ng-mouseenter="highlightclass='highlight'" ng-mouseleave="highlightclass=''">{{obj.WK2}}</td>
+        <td class="data-value" id="{{obj.WK3}}" ng-mouseenter="highlightclass='highlight'" ng-mouseleave="highlightclass=''">{{obj.WK3}}</td>
+        <td class="data-value" id="{{obj.WK4}}" ng-mouseenter="highlightclass='highlight'" ng-mouseleave="highlightclass=''">{{obj.WK4}}</td>
+        <td class="data-value" id="{{obj.iOS1}}" ng-mouseenter="highlightclass='highlight'" ng-mouseleave="highlightclass=''">{{obj.iOS1}}</td>
+        <td class="data-value" id="{{obj.iOS2}}" ng-mouseenter="highlightclass='highlight'" ng-mouseleave="highlightclass=''">{{obj.iOS2}}</td>
+      </tr>
+    </tbody>
+  </table>
+  <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="script.js"></script>
+</body>
+
 </html>
